# pyshiny_ollama

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
