[tool.poetry]
name = "pyshiny-ollama"
version = "0.1.0"
description = ""
authors = ["Juan Patricio Dugo <98497626+jpdugo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
shiny = "^0.9.0"
ruff = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
